unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/LS_VC__Visual_Calendar_HomePage__c.object-meta.xml
<CustomObject>
    <description>Administer the paragraphs and menus that appear on the HomePage screen.</description>
    <label>Visual Calendar HomePage Admin</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar HomePage Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>