unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Center_Blue_Panel_ImageID__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Center_Blue_Panel_ImageID__c</fullName>
    <inlineHelpText>Image size shouldn't be greater than 200x50 pixels.</inlineHelpText>
    <label>Center Blue Panel ImageID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>