unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Center_Orange_Panel_Title__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Center_Orange_Panel_Title__c</fullName>
    <defaultValue>"Metrics"</defaultValue>
    <description>Title for the orange box on the center.</description>
    <label>Center Orange Panel Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>