unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Center_Panel_2_Title__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Center_Panel_2_Title__c</fullName>
    <defaultValue>"Metrics"</defaultValue>
    <label>Center Panel 2 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>