unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Enable_Center_Orange_Panel__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Enable_Center_Orange_Panel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Center Orange Panel</label>
    <type>Checkbox</type>
</CustomField>