unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Enable_Side_Panel_2__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Enable_Side_Panel_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Side Panel 2</label>
    <type>Checkbox</type>
</CustomField>