unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Enable_Ticker__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Enable_Ticker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Ticker</label>
    <type>Checkbox</type>
</CustomField>