unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Sales_Communication_Hotline__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Sales_Communication_Hotline__c</fullName>
    <label>Sales Communication Hotline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>