unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Sales_Communication_Hotline_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Sales_Communication_Hotline_Paragraph__c</fullName>
    <label>Sales Communication Hotline Paragraph</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>