unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Sales_Learning_Training_Rich__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Sales_Learning_Training_Rich__c</fullName>
    <label>Sales Learning Training</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>