unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Side_Panel_1_Content__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Side_Panel_1_Content__c</fullName>
    <label>Side Panel 1 Content</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>