unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Side_Panel_1_Title__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Side_Panel_1_Title__c</fullName>
    <defaultValue>"Sales Communication"</defaultValue>
    <label>Side Panel 1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>