unpackaged/main/default/objects/LS_VC__Visual_Calendar_HomePage__c/fields/LS_VC__Ticker_Speed__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Ticker_Speed__c</fullName>
    <label>Ticker Speed</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>